--- a/OurShell/makefile
+++ b/OurShell/makefile
@@ -1,6 +1,6 @@
 shell: shell.o
-	gcc -g main.c shell.o -o our_shell
+	gcc -w -g main.c shell.o -o our_shell
 shell.o:
-	gcc -g -c shell.c -o shell.o
+	gcc -w -g -c shell.c -o shell.o
 clean:
 	rm -f *.o our_shell vgcore.*
